# advent_of_code

./: .gitignore  pyproject.toml
2023/day1/part1/: main.py  solution.py  test.py
2023/day1/part2/: main.py  solution.py  test.py
2023/day2/part1/: main.py  solution.py  test.py
2023/day2/part2/: main.py  solution.py  test.py
2023/day3/part1/: main.py  solution.py  test.py
2023/day3/part2/: main.py  solution.py  test.py
2023/day4/part1/: main.py  solution.py  test.py
2023/day4/part2/: main.py  solution.py  test.py
2023/day5/part1/: main.py  solution.py  test.py
2023/day5/part2/: main.py  solution.py  test.py
2023/day6/part1/: main.py  solution.py  test.py
2023/day6/part2/: main.py  solution.py  test.py
2023/day7/part1/: main.py  solution.py  test.py
2023/day7/part2/: main.py  solution.py  test.py
2023/day8/part1/: main.py  solution.py  test.py
2023/day8/part2/: main.py  solution.py  test.py
aoc/: helpers.py
aoc/y2023/day1/: solution.py
aoc/y2023/day10/: solution.py
aoc/y2023/day11/: solution.py
aoc/y2023/day12/: solution.py
aoc/y2023/day13/: solution.py
aoc/y2023/day14/: solution.py
aoc/y2023/day15/: solution.py
aoc/y2023/day16/: solution.py
aoc/y2023/day2/: solution.py
aoc/y2023/day3/: solution.py
aoc/y2023/day4/: solution.py
aoc/y2023/day5/: solution.py
aoc/y2023/day6/: solution.py
aoc/y2023/day7/: solution.py
aoc/y2023/day8/: solution.py
aoc/y2023/day9/: solution.py
tests/aoc/y2023/day1/: test_solution.py
tests/aoc/y2023/day10/: test_solution.py
tests/aoc/y2023/day11/: test_solution.py
(+13 files in other folders)
